# local_lambdas

./: .gitignore  ARCHITECTURE.md  Cargo.toml  HTTP_COMMUNICATION.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_METRICS.md  PERFORMANCE_TEST_DOCUMENTATION.md  README.md  manifest.xml
.github/workflows/: test.yml
examples/dotnet-perf-test/: README.md  manifest.xml  run_performance_tests.py
examples/dotnet-perf-test/HttpService/: Program.cs
examples/dotnet-perf-test/PipeService/: Program.cs
examples/echo-service/: README.md  echo_service.py  manifest.xml
examples/perf-test-service/: README.md  http_only_service.py  manifest.xml  perf_test_service.py  pipe_only_service.py
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/config/: mod.rs  xml_repository.rs
src/adapters/http/: mod.rs  server.rs
src/adapters/process/: mod.rs  tokio_orchestrator.rs
src/config/: mod.rs
src/domain/: entities.rs  mod.rs  repositories.rs  utils.rs
src/infrastructure/: http_client.rs  mod.rs  pipes.rs
src/orchestrator/: mod.rs
src/pipes/: mod.rs
src/proxy/: mod.rs
src/use_cases/: mod.rs
tests/: e2e_tests.rs  integration_tests.rs  perf_comparison_tests.rs
