[package]
name = "local_lambdas"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.6"
serde_json = "1"
base64 = "0.22"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Named pipes (cross-platform)
tokio-pipe = "0.2"

# Process management
tokio-process = "0.2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
mockito = "1"
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
